Fixes bug w/ Creating new user from Google API data in UsersController#create. CSS: Changes side-info alignment.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -177,7 +177,7 @@ main {
 .side-info {
   padding: 20px 0 0 5px;
 /*  margin: auto;*/
-  text-align: center;
+  text-align: left;
 }
 .side-content > ul > li {
   display: block;
